<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/workbench_bg"
    >

    <include layout="@layout/util_head_view" />
    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_entrypersonelinfo"
            android:layout_marginTop="@dimen/textmagtop10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personnelEntryInfo"
            />

        <Button
            android:id="@+id/btn_searchpersonelinfo"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/textmagtop10"
            android:layout_height="wrap_content"
            android:text="@string/personnelSearchInfo"
            />

        <Button
            android:id="@+id/btn_rentalAndfloating"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/textmagtop10"
            android:layout_height="wrap_content"
            android:text="@string/rentalAndfloating"
            />
    </LinearLayout>
</LinearLayout>